--- a/UITableView-AutoResizingHeader/UITableView-AutoResizingHeader/Base.lproj/Main.storyboard
+++ b/UITableView-AutoResizingHeader/UITableView-AutoResizingHeader/Base.lproj/Main.storyboard
@@ -1,8 +1,12 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C68" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -14,59 +18,59 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vgW-SG-12T">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vgW-SG-12T">
                                 <rect key="frame" x="0.0" y="20" width="600" height="580"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="5Hp-ld-Pas">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="273"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Auto Resizing Header" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6c3-5G-QXn">
-                                            <rect key="frame" x="30" y="30" width="540" height="21.5"/>
+                                            <rect key="frame" x="30" y="30" width="540" height="22"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This header can dynamically resize according to its contents." textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bZ4-Vw-QbB">
-                                            <rect key="frame" x="30" y="71.5" width="540" height="20.5"/>
+                                            <rect key="frame" x="30" y="72" width="540" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                            <color key="textColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nsb-KW-eNm">
-                                            <rect key="frame" x="30" y="112" width="300" height="34"/>
-                                            <color key="backgroundColor" red="0.55735187552412524" green="0.82061298076923084" blue="0.50167511599112269" alpha="1" colorSpace="calibratedRGB"/>
+                                            <rect key="frame" x="30" y="113" width="300" height="34"/>
+                                            <color key="backgroundColor" red="0.55735187552412524" green="0.82061298076923084" blue="0.50167511599112269" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="34" id="bjk-YR-Btw"/>
                                                 <constraint firstAttribute="width" constant="300" id="rdU-8q-vRo"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                             <state key="normal" title="Add More Text">
-                                                <color key="titleColor" red="0.95233203629394736" green="0.95686274510000002" blue="0.93284053816083201" alpha="1" colorSpace="calibratedRGB"/>
+                                                <color key="titleColor" red="0.95233203629394736" green="0.95686274510000002" blue="0.93284053816083201" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             </state>
                                             <connections>
                                                 <action selector="addMoreText:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ex1-YG-MbJ"/>
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vyi-dw-9Kb">
-                                            <rect key="frame" x="30" y="166" width="300" height="34"/>
-                                            <color key="backgroundColor" red="0.8206129808" green="0.76355254370022962" blue="0.35544366608232747" alpha="1" colorSpace="calibratedRGB"/>
+                                            <rect key="frame" x="30" y="167" width="300" height="34"/>
+                                            <color key="backgroundColor" red="0.8206129808" green="0.76355254370022962" blue="0.35544366608232747" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="34" id="SV6-RP-bgP"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                             <state key="normal" title="Make This Taller (Animated)">
-                                                <color key="titleColor" red="0.95233203629999996" green="0.95686274510000002" blue="0.93284053820000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                <color key="titleColor" red="0.95233203629999996" green="0.95686274510000002" blue="0.93284053820000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             </state>
                                             <connections>
                                                 <action selector="makeThisTaller:" destination="BYZ-38-t0r" eventType="touchUpInside" id="61O-X2-lOf"/>
                                             </connections>
                                         </button>
                                     </subviews>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstItem="Nsb-KW-eNm" firstAttribute="top" secondItem="bZ4-Vw-QbB" secondAttribute="bottom" constant="20" id="9uV-NP-ik0"/>
                                         <constraint firstItem="6c3-5G-QXn" firstAttribute="leading" secondItem="5Hp-ld-Pas" secondAttribute="leading" constant="30" id="FGZ-8a-IpU"/>
@@ -87,14 +91,14 @@
                                         <rect key="frame" x="0.0" y="301" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="jzv-5J-gvQ" id="JQP-Lk-RiU">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="vgW-SG-12T" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="4Yh-3b-oAh"/>
                             <constraint firstItem="vgW-SG-12T" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="iNe-3t-AfO"/>
